--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-<title>DevZone</title>
-<link rel="stylesheet" href="style.css">
+    <title>DevZone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <div class="bar-btns">
         <ul>
-            <left><a class="active"  href="">Home</a></left>
+            <left><a class="active" href="">Home</a></left>
             <left><a href="news/">News</a></left>
             <right><a href="contact/">Contact</a></right>
             <right><a href="ourwork/">Our Work</a></right>
@@ -20,17 +20,21 @@
     <div class="tocont"></div>
 </body>
 
-    <script>
-        $(document).ready(function () {
-            $(".bar-btns").css({
-                'height': ($(".dz-bar").height() + 'px')
-            });
-            $("left").css({
-                'height': ($(".dz-bar").height() + 'px')
-            });
-            $(".tocont").css({
-                'top': ($(".dz-bar").height() + 'px')
-            });
+<script>
+    $(document).ready(function() {
+        $(".bar-btns").css({
+            'height': ($(".dz-bar").height() + 'px')
         });
+        $("left a").css({
+            'padding-top': (($(".dz-bar").height() / 2 + 10) + "px")
+        });
+        $("right a").css({
+            'padding-top': (($(".dz-bar").height() / 2 + 10) + "px")
+        });
+        $(".tocont").css({
+            'top': ($(".dz-bar").height() + 'px')
+        });
+    });
 </script>
+
 </html>
