--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <img class="dz-bar" src="Untitled-1.png">
+    <img class="dz-bar" src="part1.png">
+    <img class="dz-logo" src="part2.png">
     <div class="bar-btns">
         <ul>
             <left><a class="active" href="">Home</a></left>
@@ -23,18 +24,18 @@
 <script>
     $(document).ready(function() {
         $(".tocont").css({
-            'top': ($(".dz-bar").height() + "px")
+            'top': ($(".dz-logo").height() + "px")
         });
         $(".bar-btns").css({
-            'top': ($(".dz-bar").height() - ($(".bar-btns").height()))
+            'top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
     $(window).resize(function() {
         $(".tocont").css({
-            'top': ($(".dz-bar").height() + "px")
+            'top': ($(".dz-logo").height() + "px")
         });
         $(".bar-btns").css({
-            'top': ($(".dz-bar").height() - ($(".bar-btns").height()))
+            'top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
 </script>
