--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>DevZone</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="Untitled-2.png">
 </head>
 
 <body>
