applied changes to the other pages

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <img class="dz-bar" src="part1.png">
-    <img class="dz-logo" src="part2.png">
+    <img class="dz-logo" href="/" src="part2.png">
     <div class="bar-btns">
         <ul>
-            <left><a class="active" href="">Home</a></left>
+            <left><a class="active" href="portfolio/">Portfolio</a></left>
             <left><a href="news/">News</a></left>
             <right><a href="contact/">Contact</a></right>
             <right><a href="ourwork/">Our Work</a></right>
