--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
             <left><a class="active" href="../portfolio/">Portfolio</a></left>
             <left><a href="../news/">News</a></left>
             <right><a href="../contact/">Contact</a></right>
-            <right><a class="active" href="../ourwork/">Our Work</a></right>
+            <right><a href="../ourwork/">Our Work</a></right>
         </ul>
     </div>
     <div class="tocont"></div>
