--- a/ourwork/index.html
+++ b/ourwork/index.html
@@ -13,7 +13,7 @@
     <img class="dz-logo" href="../news/" src="../part2.png">
     <div class="bar-btns">
         <ul>
-            <left><a class="active" href="../portfolio/">Portfolio</a></left>
+            <left><a href="../portfolio/">Portfolio</a></left>
             <left><a href="../news/">News</a></left>
             <right><a href="../contact/">Contact</a></right>
             <right><a class="active" href="../ourwork/">Our Work</a></right>
