add link to devzone picture

--- a/ourwork/index.html
+++ b/ourwork/index.html
@@ -10,7 +10,7 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <img class="dz-bar" src="../part1.png">
-    <img class="dz-logo" href="../news/" src="../part2.png">
+    <a href="../"><img class="dz-logo" src="part2.png"></a>
     <div class="bar-btns">
         <ul>
             <left><a href="../portfolio/">Portfolio</a></left>
