--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,6 @@
         </ul>
     </div>
     <div class="tocont"></div>
-    <div class="nothing" id="i do this so static divs come after the bar lol"></div>
     <div id="content">
         <p style="font-size: 30px;">This is done so we can see the scroll bar: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed odio consectetur, hendrerit dolor ut, feugiat mi. In aliquet fringilla risus. Sed id lorem eget mauris porta interdum in eu nisl.
             Suspendisse id massa sit amet ligula ornare blandit nec ut tortor. Proin et tellus bibendum, feugiat sapien in, ornare urna. Nulla feugiat convallis nunc, at posuere tortor scelerisque vitae. Quisque eu porta arcu, nec eleifend orci. Nam est
@@ -55,25 +54,13 @@
 
 <script>
     $(document).ready(function() {
-        $(".tocont").css({
-            'top': ($(".dz-logo").height() + "px")
-        });
-        $(".nothing").css({
-            'height': ($(".dz-logo").height() + "px")
-        });
         $(".bar-btns").css({
-            'top': ($(".dz-logo").height() - ($(".bar-btns").height()))
+            'padding-top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
     $(window).resize(function() {
-        $(".tocont").css({
-            'top': ($(".dz-logo").height() + "px")
-        });
-        $(".nothing").css({
-            'height': ($(".dz-logo").height() + "px")
-        });
         $(".bar-btns").css({
-            'top': ($(".dz-logo").height() - ($(".bar-btns").height()))
+            'padding-top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
 </script>
