add a theme meta tag to all pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,8 @@
     <title>DevZone | Contact</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/png" href="../Untitled-2.png">
+    <meta name="theme-color" content="#e53838"/>
+
 </head>
 
 <body>
