--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="Untitled-2.png">
     <meta name="theme-color" content="#e53838"/>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="jquery.SplashScreen.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="jquery.SplashScreen.js"></script>
 </head>
 
 <body>
@@ -70,5 +73,9 @@
         });
     });
 </script>
-
+<script>
+    $(document).ready(function() {
+        $.SplashScreen();
+    });
+</script>
 </html>
