formated index.html and tested splash screen

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             at tempus tempor, tellus ligula cursus lacus, sit amet tincidunt risus mi a metus. Suspendisse eget mauris et justo ullamcorper gravida. Maecenas consectetur enim in egestas pretium. Nullam volutpat elit felis, a gravida felis iaculis sit
             amet. Donec vel semper lorem. Proin eu sagittis nulla. Sed sit amet purus enim. Nunc sodales non ipsum et euismod. Vivamus ac lacinia nulla, sit amet tristique est. Sed interdum feugiat justo. Pellentesque lobortis.</p>
     </div>
+    <div id="splashscreen">
+    </div> 
 </body>
 
 <script>
