formatted all pages and removed failed splash screen

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title>DevZone | Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="Untitled-2.png">
-    <meta name="theme-color" content="#e53838"/>
-    <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-    <link rel="stylesheet" href="jquery.SplashScreen.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="jquery.SplashScreen.js"></script>
+    <meta name="theme-color" content="#e53838" />
 </head>
 
 <body>
@@ -25,59 +22,110 @@
     </div>
     <div class="tocont"></div>
     <div id="content">
-        <p style="font-size: 30px;">This is done so we can see the scroll bar: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed odio consectetur, hendrerit dolor ut, feugiat mi. In aliquet fringilla risus. Sed id lorem eget mauris porta interdum in eu nisl.
-            Suspendisse id massa sit amet ligula ornare blandit nec ut tortor. Proin et tellus bibendum, feugiat sapien in, ornare urna. Nulla feugiat convallis nunc, at posuere tortor scelerisque vitae. Quisque eu porta arcu, nec eleifend orci. Nam est
-            urna, efficitur non felis lobortis, facilisis interdum dui. Nullam tempor vitae elit eget tempor. Sed venenatis ligula ac lacinia efficitur. Donec at condimentum magna. Mauris scelerisque ullamcorper posuere. Phasellus vitae rutrum lorem.
-            Nam viverra vitae mauris ac fermentum. Ut congue elit quis magna mattis rhoncus. Vestibulum porttitor at justo quis ultricies. Nullam vel ex pharetra, viverra lorem a, eleifend augue. Praesent gravida lectus vitae hendrerit ullamcorper. In
-            vel sollicitudin nisi. Fusce vulputate posuere mauris, et lacinia lectus commodo quis. Phasellus pharetra pulvinar neque sit amet venenatis. Praesent hendrerit vulputate varius. Aliquam finibus, metus non rutrum fermentum, arcu ligula venenatis
-            dolor, at interdum nibh est nec velit. Cras enim odio, imperdiet ac hendrerit non, pharetra eget eros. Morbi sit amet neque lacinia, placerat augue interdum, vulputate dolor. Curabitur sed dapibus elit. Nulla efficitur imperdiet est pretium
-            bibendum. Proin sit amet faucibus eros, nec convallis enim. Maecenas hendrerit nibh consectetur nisi ultrices consectetur. Sed non ex eget turpis tristique vestibulum. Proin quis posuere tellus. Phasellus vel sollicitudin neque. Proin porta
-            magna quis arcu tristique blandit. Sed eu mauris vel velit dignissim feugiat. Fusce interdum, erat in vulputate faucibus, ante urna sagittis ex, quis rhoncus tortor velit in velit. Nullam consectetur lorem in varius convallis. Suspendisse
-            est mi, cursus et accumsan vel, malesuada ac orci. Donec malesuada urna sit amet nisl molestie varius. Aliquam rutrum scelerisque blandit. Mauris varius arcu vitae lectus efficitur, at lobortis dui venenatis. Quisque quis congue odio, vel
-            mattis purus. Proin semper nulla justo, et mollis massa dapibus eget. Vivamus purus magna, imperdiet ac vestibulum quis, rutrum vel magna. Maecenas massa lectus, dapibus a sapien ut, euismod imperdiet lectus. Maecenas euismod ornare ipsum
-            sit amet dapibus. In vulputate aliquet vehicula. Etiam consectetur vehicula neque. Nulla arcu nisl, ultricies sit amet arcu in, condimentum sodales odio. Nam accumsan, dui id facilisis mollis, nisl justo auctor quam, non accumsan turpis tellus
-            ornare mi. Nam ultricies sit amet ex ac scelerisque. Proin enim mi, accumsan at vulputate non, egestas in neque. Donec id felis elit. Sed sed elit gravida, tempus sapien in, faucibus turpis. Ut ac placerat ante. Etiam at dui ut libero venenatis
-            imperdiet lobortis id purus. Nullam at leo molestie, egestas lacus non, dignissim ipsum. Vestibulum eget porta enim, et venenatis risus. Nunc venenatis imperdiet arcu ac accumsan. Nunc vel condimentum lorem. Vivamus ac nisl nibh. In vitae
-            magna mauris. Praesent blandit sem elit, quis condimentum diam dignissim et. Duis in ultricies metus. Nullam sit amet lorem quis felis consectetur varius et at est. Donec lobortis nibh ac ipsum fermentum bibendum tempor a leo. Ut a purus non
-            orci bibendum iaculis. In in arcu finibus, aliquam urna vel, posuere nibh. Aliquam id ullamcorper eros, sed maximus libero. Quisque finibus sapien at ullamcorper volutpat. Aliquam ultricies massa quis mi ullamcorper sollicitudin. Mauris ultricies
-            gravida tempus. Aenean bibendum diam ac orci rhoncus pharetra. Donec vehicula, nisi et posuere egestas, magna dui consectetur nulla, in tempor nulla tellus non ligula. Sed condimentum eu libero et elementum. Ut vitae dictum enim. Suspendisse
-            porttitor, felis a ultrices malesuada, arcu orci finibus nisi, ut tempor felis magna pulvinar dolor. Maecenas vel dolor massa. Integer in elementum velit, in scelerisque sapien. In vel maximus lectus. Morbi varius tellus gravida augue sodales,
-            eu pellentesque nisl egestas. Etiam ultrices sapien id leo viverra feugiat. Suspendisse potenti. Ut non rhoncus tortor, a tempor nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla aliquam libero
-            ligula, ac ullamcorper nulla tincidunt vitae. Mauris vitae ipsum ante. Quisque ut mollis augue, non cursus neque. Nullam et convallis ligula, et mattis tellus. Phasellus tristique ante tellus, eu ullamcorper sem mollis in. Quisque eros lectus,
-            mattis id lorem a, bibendum facilisis purus. Donec dapibus eget sapien sit amet tempus. Nulla mollis, mi eu aliquet tincidunt, quam urna placerat erat, nec iaculis mi dolor ut odio. Aenean commodo placerat massa in convallis. Maecenas at ipsum
-            eu quam commodo dapibus. Nullam a condimentum enim, vitae sagittis leo. Donec ac varius odio. Ut venenatis sodales lectus, eu rutrum nunc eleifend ut. Nulla faucibus ac mi in tempus. Nullam eget gravida arcu. Vivamus hendrerit hendrerit diam,
-            feugiat laoreet risus aliquet at. Nulla venenatis erat non lacus tempor, nec venenatis tellus fermentum. Nullam interdum lorem laoreet lorem rhoncus, in maximus ex bibendum. Donec vulputate dapibus arcu id dictum. Etiam justo lectus, pretium
-            at posuere id, ultricies vel libero. Suspendisse potenti. In ac tempor nunc. Sed auctor sem a varius porta. Mauris egestas turpis odio, vitae feugiat quam vestibulum at. Aenean tempus dui vitae mauris consectetur, ac molestie est imperdiet.
-            Phasellus nec ante egestas, scelerisque lacus at, sollicitudin dui. Donec urna enim, semper a lectus in, dictum ullamcorper enim. Praesent a fringilla mi, ultricies rutrum erat. Donec sollicitudin vel ligula at sollicitudin. Donec feugiat
-            risus eu tristique ultrices. Praesent sed est id ipsum auctor bibendum. Quisque non ex quis dui commodo varius. Phasellus urna arcu, tincidunt ac felis vel, maximus scelerisque tellus. Curabitur in lobortis justo, at finibus nisi. Aenean id
-            mollis leo, eget pharetra nunc. Aenean ac turpis luctus, sagittis eros quis, accumsan justo. Maecenas mattis lacinia volutpat. Maecenas sed ornare velit. Vivamus dui libero, facilisis at sollicitudin non, viverra ut nisi. Nam fermentum, augue
-            at tempus tempor, tellus ligula cursus lacus, sit amet tincidunt risus mi a metus. Suspendisse eget mauris et justo ullamcorper gravida. Maecenas consectetur enim in egestas pretium. Nullam volutpat elit felis, a gravida felis iaculis sit
-            amet. Donec vel semper lorem. Proin eu sagittis nulla. Sed sit amet purus enim. Nunc sodales non ipsum et euismod. Vivamus ac lacinia nulla, sit amet tristique est. Sed interdum feugiat justo. Pellentesque lobortis.</p>
+        <p style="font-size: 30px;">This is done so we can see the scroll bar: Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vestibulum sed odio consectetur, hendrerit dolor ut, feugiat mi. In aliquet fringilla
+            risus. Sed id lorem eget mauris porta interdum in eu nisl.
+            Suspendisse id massa sit amet ligula ornare blandit nec ut tortor. Proin et tellus bibendum, feugiat sapien
+            in, ornare urna. Nulla feugiat convallis nunc, at posuere tortor scelerisque vitae. Quisque eu porta arcu,
+            nec eleifend orci. Nam est
+            urna, efficitur non felis lobortis, facilisis interdum dui. Nullam tempor vitae elit eget tempor. Sed
+            venenatis ligula ac lacinia efficitur. Donec at condimentum magna. Mauris scelerisque ullamcorper posuere.
+            Phasellus vitae rutrum lorem.
+            Nam viverra vitae mauris ac fermentum. Ut congue elit quis magna mattis rhoncus. Vestibulum porttitor at
+            justo quis ultricies. Nullam vel ex pharetra, viverra lorem a, eleifend augue. Praesent gravida lectus vitae
+            hendrerit ullamcorper. In
+            vel sollicitudin nisi. Fusce vulputate posuere mauris, et lacinia lectus commodo quis. Phasellus pharetra
+            pulvinar neque sit amet venenatis. Praesent hendrerit vulputate varius. Aliquam finibus, metus non rutrum
+            fermentum, arcu ligula venenatis
+            dolor, at interdum nibh est nec velit. Cras enim odio, imperdiet ac hendrerit non, pharetra eget eros. Morbi
+            sit amet neque lacinia, placerat augue interdum, vulputate dolor. Curabitur sed dapibus elit. Nulla
+            efficitur imperdiet est pretium
+            bibendum. Proin sit amet faucibus eros, nec convallis enim. Maecenas hendrerit nibh consectetur nisi
+            ultrices consectetur. Sed non ex eget turpis tristique vestibulum. Proin quis posuere tellus. Phasellus vel
+            sollicitudin neque. Proin porta
+            magna quis arcu tristique blandit. Sed eu mauris vel velit dignissim feugiat. Fusce interdum, erat in
+            vulputate faucibus, ante urna sagittis ex, quis rhoncus tortor velit in velit. Nullam consectetur lorem in
+            varius convallis. Suspendisse
+            est mi, cursus et accumsan vel, malesuada ac orci. Donec malesuada urna sit amet nisl molestie varius.
+            Aliquam rutrum scelerisque blandit. Mauris varius arcu vitae lectus efficitur, at lobortis dui venenatis.
+            Quisque quis congue odio, vel
+            mattis purus. Proin semper nulla justo, et mollis massa dapibus eget. Vivamus purus magna, imperdiet ac
+            vestibulum quis, rutrum vel magna. Maecenas massa lectus, dapibus a sapien ut, euismod imperdiet lectus.
+            Maecenas euismod ornare ipsum
+            sit amet dapibus. In vulputate aliquet vehicula. Etiam consectetur vehicula neque. Nulla arcu nisl,
+            ultricies sit amet arcu in, condimentum sodales odio. Nam accumsan, dui id facilisis mollis, nisl justo
+            auctor quam, non accumsan turpis tellus
+            ornare mi. Nam ultricies sit amet ex ac scelerisque. Proin enim mi, accumsan at vulputate non, egestas in
+            neque. Donec id felis elit. Sed sed elit gravida, tempus sapien in, faucibus turpis. Ut ac placerat ante.
+            Etiam at dui ut libero venenatis
+            imperdiet lobortis id purus. Nullam at leo molestie, egestas lacus non, dignissim ipsum. Vestibulum eget
+            porta enim, et venenatis risus. Nunc venenatis imperdiet arcu ac accumsan. Nunc vel condimentum lorem.
+            Vivamus ac nisl nibh. In vitae
+            magna mauris. Praesent blandit sem elit, quis condimentum diam dignissim et. Duis in ultricies metus. Nullam
+            sit amet lorem quis felis consectetur varius et at est. Donec lobortis nibh ac ipsum fermentum bibendum
+            tempor a leo. Ut a purus non
+            orci bibendum iaculis. In in arcu finibus, aliquam urna vel, posuere nibh. Aliquam id ullamcorper eros, sed
+            maximus libero. Quisque finibus sapien at ullamcorper volutpat. Aliquam ultricies massa quis mi ullamcorper
+            sollicitudin. Mauris ultricies
+            gravida tempus. Aenean bibendum diam ac orci rhoncus pharetra. Donec vehicula, nisi et posuere egestas,
+            magna dui consectetur nulla, in tempor nulla tellus non ligula. Sed condimentum eu libero et elementum. Ut
+            vitae dictum enim. Suspendisse
+            porttitor, felis a ultrices malesuada, arcu orci finibus nisi, ut tempor felis magna pulvinar dolor.
+            Maecenas vel dolor massa. Integer in elementum velit, in scelerisque sapien. In vel maximus lectus. Morbi
+            varius tellus gravida augue sodales,
+            eu pellentesque nisl egestas. Etiam ultrices sapien id leo viverra feugiat. Suspendisse potenti. Ut non
+            rhoncus tortor, a tempor nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+            cubilia Curae; Nulla aliquam libero
+            ligula, ac ullamcorper nulla tincidunt vitae. Mauris vitae ipsum ante. Quisque ut mollis augue, non cursus
+            neque. Nullam et convallis ligula, et mattis tellus. Phasellus tristique ante tellus, eu ullamcorper sem
+            mollis in. Quisque eros lectus,
+            mattis id lorem a, bibendum facilisis purus. Donec dapibus eget sapien sit amet tempus. Nulla mollis, mi eu
+            aliquet tincidunt, quam urna placerat erat, nec iaculis mi dolor ut odio. Aenean commodo placerat massa in
+            convallis. Maecenas at ipsum
+            eu quam commodo dapibus. Nullam a condimentum enim, vitae sagittis leo. Donec ac varius odio. Ut venenatis
+            sodales lectus, eu rutrum nunc eleifend ut. Nulla faucibus ac mi in tempus. Nullam eget gravida arcu.
+            Vivamus hendrerit hendrerit diam,
+            feugiat laoreet risus aliquet at. Nulla venenatis erat non lacus tempor, nec venenatis tellus fermentum.
+            Nullam interdum lorem laoreet lorem rhoncus, in maximus ex bibendum. Donec vulputate dapibus arcu id dictum.
+            Etiam justo lectus, pretium
+            at posuere id, ultricies vel libero. Suspendisse potenti. In ac tempor nunc. Sed auctor sem a varius porta.
+            Mauris egestas turpis odio, vitae feugiat quam vestibulum at. Aenean tempus dui vitae mauris consectetur, ac
+            molestie est imperdiet.
+            Phasellus nec ante egestas, scelerisque lacus at, sollicitudin dui. Donec urna enim, semper a lectus in,
+            dictum ullamcorper enim. Praesent a fringilla mi, ultricies rutrum erat. Donec sollicitudin vel ligula at
+            sollicitudin. Donec feugiat
+            risus eu tristique ultrices. Praesent sed est id ipsum auctor bibendum. Quisque non ex quis dui commodo
+            varius. Phasellus urna arcu, tincidunt ac felis vel, maximus scelerisque tellus. Curabitur in lobortis
+            justo, at finibus nisi. Aenean id
+            mollis leo, eget pharetra nunc. Aenean ac turpis luctus, sagittis eros quis, accumsan justo. Maecenas mattis
+            lacinia volutpat. Maecenas sed ornare velit. Vivamus dui libero, facilisis at sollicitudin non, viverra ut
+            nisi. Nam fermentum, augue
+            at tempus tempor, tellus ligula cursus lacus, sit amet tincidunt risus mi a metus. Suspendisse eget mauris
+            et justo ullamcorper gravida. Maecenas consectetur enim in egestas pretium. Nullam volutpat elit felis, a
+            gravida felis iaculis sit
+            amet. Donec vel semper lorem. Proin eu sagittis nulla. Sed sit amet purus enim. Nunc sodales non ipsum et
+            euismod. Vivamus ac lacinia nulla, sit amet tristique est. Sed interdum feugiat justo. Pellentesque
+            lobortis.</p>
     </div>
-    <div id="splashscreen">
-    </div> 
+
 </body>
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         $(".bar-btns").css({
             'padding-top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
-    $(window).resize(function() {
+    $(window).resize(function () {
         $(".bar-btns").css({
             'padding-top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
-    $(window).load(function() {
+    $(window).load(function () {
         $(".bar-btns").css({
             'padding-top': ($(".dz-logo").height() - ($(".bar-btns").height()))
         });
     });
 </script>
-<script>
-    $(document).ready(function() {
-        $.SplashScreen();
-    });
-</script>
+
 </html>
