--- a/index.html
+++ b/index.html
@@ -2,94 +2,86 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Home|DevZone</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Quicksand:wght@500;700&family=Raleway:wght@200;300&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Quicksand:wght@500;700&family=Raleway:wght@200;300&display=swap" rel="stylesheet">
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-  <!--[if IE]>
+    <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <div class="container">
-    <nav>
-      <img class="logo" src="./img/DevZone.png" alt="logo">
-      <ul>
-        <a class="borderLeftRight">
-          <li>HOME</li>
-        </a>
-        <a class="borderLeftRight">
-          <li>BLOGS</li>
-        </a>
-        <a class="borderLeftRight">
-          <li>RESOURCES</li>
-        </a>
-        <a class="borderLeftRight">
-          <li>CONTACTS</li>
-        </a>
-      </ul>
-      <input type="checkbox" id="toggle" class="offscreen" /> <label for="toggle" class="switch"></label>
-    </nav>
-    <section class="secOne">
-      <h1>DEVZONE</h1>
-      <h3>The place where developers come together, to discuss, to create.</h3>
-      <button class="pressDown">READ OUR BLOG</button>
-      <div class="arrowBounce">
-        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#21004f"
-          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down">
+    <div class="container">
+        <nav>
+            <img class="logo" src="./img/DevZone.png" alt="logo">
+            <ul>
+                <a class="borderLeftRight">
+                    <li>HOME</li>
+                </a>
+                <a href="blogs/blogs.html" class="borderLeftRight">
+                    <li>BLOGS</li>
+                </a>
+                <a class="borderLeftRight">
+                    <li>RESOURCES</li>
+                </a>
+                <a class="borderLeftRight">
+                    <li>CONTACTS</li>
+                </a>
+            </ul>
+            <input type="checkbox" id="toggle" class="offscreen" /> <label for="toggle" class="switch"></label>
+        </nav>
+        <section class="secOne">
+            <h1>DEVZONE</h1>
+            <h3>The place where developers come together, to discuss, to create.</h3>
+            <button class="pressDown">READ OUR BLOG</button>
+            <div class="arrowBounce">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#21004f" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down">
           <line x1="12" y1="5" x2="12" y2="19"></line>
           <polyline points="19 12 12 19 5 12"></polyline>
         </svg>
-      </div>
-    </section>
-    <section class="secTwo">
-      <h1>ABOUT US</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque sequi vitae animi doloremque saepe
-        perspiciatis, quas rem quam aspernatur numquam!
+            </div>
+        </section>
+        <section class="secTwo">
+            <h1>ABOUT US</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque sequi vitae animi doloremque saepe perspiciatis, quas rem quam aspernatur numquam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo maiores non molestias illo dolor
+                veniam dolorem quibusdam, eius delectus, nisi dolores iure, in quasi similique facere voluptatibus optio quas enim.
+            </p>
+        </section>
+    </div>
+    <!-- Add your site or application content here -->
 
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo maiores non molestias illo dolor veniam dolorem
-        quibusdam, eius delectus, nisi dolores iure, in quasi similique facere voluptatibus optio quas enim.
-      </p>
-    </section>
-  </div> <!-- Add your site or application content here -->
+    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
-
-  </script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () {
-      ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto');
-    ga('set', 'transport', 'beacon');
-    ga('send', 'pageview')
-
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('set', 'transport', 'beacon');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
