--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="borderLeftRight">
                     <li>HOME</li>
                 </a>
-                <a href="blogs/blogs.html" class="borderLeftRight">
+                <a href="./blogs/blogs.html" class="borderLeftRight">
                     <li>BLOGS</li>
                 </a>
                 <a class="borderLeftRight">
