Made Blog Template.
This is using placehoder assets right now. Not fully complete yet.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/nav.css">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Quicksand:wght@500;700&family=Raleway:wght@200;300&display=swap"
@@ -32,7 +33,7 @@
         <a class="borderLeftRight">
           <li>HOME</li>
         </a>
-        <a class="borderLeftRight">
+        <a href="./blogs/template.html" class="borderLeftRight">
           <li>BLOGS</li>
         </a>
         <a class="borderLeftRight">
