--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/nav.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Quicksand:wght@500;700&family=Raleway:wght@200;300&display=swap" rel="stylesheet">
 
