--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="borderLeftRight">
                     <li>HOME</li>
                 </a>
-                <a href="./blogs/blogs.html" class="borderLeftRight">
+                <a href="./blogs/template.html" class="borderLeftRight">
                     <li>BLOGS</li>
                 </a>
                 <a class="borderLeftRight">
