Added Dark Mode and Blog Selector.

--- a/blogs/template.html
+++ b/blogs/template.html
@@ -29,7 +29,7 @@
         <li>RESOURCES</li>
       </a>
       <a class="borderLeftRight">
-        <li>CONTACTS</li>
+        <li>PROJECTS</li>
       </a>
     </ul>
     <input type="checkbox" id="toggle" class="offscreen" /> <label for="toggle" class="switch"></label>
