--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Quicksand:wght@500;700&family=Raleway:wght@200;300&display=swap"
@@ -21,10 +22,6 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <style>
-
-
-  </style>
 </head>
 
 <body>
@@ -38,7 +35,7 @@
         <a class="borderLeftRight">
           <li>HOME</li>
         </a>
-        <a href="./blogs/blogs.html" class="borderLeftRight">
+        <a href="./blogs/blogSelector.html" class="borderLeftRight">
           <li>BLOGS</li>
         </a>
         <a class="borderLeftRight">
