--- a/blogs/blogSelector.html
+++ b/blogs/blogSelector.html
@@ -25,12 +25,12 @@
       <a class="borderLeftRight">
         <li>BLOGS</li>
       </a>
-      <a class="borderLeftRight">
+      <!-- <a class="borderLeftRight">
         <li>RESOURCES</li>
       </a>
       <a class="borderLeftRight">
         <li>PROJECTS</li>
-      </a>
+      </a> -->
     </ul>
     <div class="theme-switch-wrapper">
       <label class="theme-switch" for="checkbox">
@@ -39,12 +39,12 @@
       </label>
     </div>
   </nav>
-  <a href="">
+  <a href="welcomeBlog.html">
     <article>
       <img src="../img/untitled.png">
       <div class="aboutBlog">
         <h1>
-          <span>Template Blog :></span>
+          <span>Welcome to DevZone!</span>
         </h1>
         <div class="author">
           <img src="../img/DevZone.png">
@@ -54,49 +54,7 @@
             </h3>
           </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, velit!
-        </p>
-      </div>
-    </article>
-  </a>
-
-  <a href="">
-    <article>
-      <img src="../img/untitled.png">
-      <div class="aboutBlog">
-        <h1>
-          <span>Template Blog :></span>
-        </h1>
-        <div class="author">
-          <img src="../img/DevZone.png">
-          <div class="aboutAuthor">
-            <h3>
-              Aryan Godde
-            </h3>
-          </div>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, velit!
-        </p>
-      </div>
-    </article>
-  </a>
-
-  <a href="">
-    <article>
-      <img src="../img/untitled.png">
-      <div class="aboutBlog">
-        <h1>
-          <span>Template Blog :></span>
-        </h1>
-        <div class="author">
-          <img src="../img/DevZone.png">
-          <div class="aboutAuthor">
-            <h3>
-              Aryan Godde
-            </h3>
-          </div>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, velit!
+        <p>Your go to place, for help relating development!
         </p>
       </div>
     </article>
