--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <a href="./blogs/blogSelector.html" class="borderLeftRight">
           <li>BLOGS</li>
         </a>
-        <a class="borderLeftRight">
+        <!-- <a class="borderLeftRight">
           <li>RESOURCES</li>
         </a>
         <a class="borderLeftRight">
           <li>CONTACTS</li>
-        </a>
+        </a> -->
       </ul>
       <div class="theme-switch-wrapper">
         <label class="theme-switch" for="checkbox">
@@ -56,7 +56,7 @@
     <section class="secOne">
       <h1>DEVZONE</h1>
       <h3>The place where developers come together, to discuss, to create.</h3>
-      <button class="pressDown">READ OUR BLOG</button>
+      <a href="blogs/blogSelector.html"><button class="pressDown">READ OUR BLOG</button></a>
       <div class="arrowBounce">
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#3c3444"
           stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down">
@@ -68,12 +68,13 @@
     </section>
     <section class="secTwo">
       <h1>ABOUT US</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque sequi vitae animi doloremque saepe
-        perspiciatis, quas rem quam aspernatur numquam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo
-        maiores non molestias illo dolor
-        veniam dolorem quibusdam, eius delectus, nisi dolores iure, in quasi similique facere voluptatibus optio quas
-        enim.
+      <p>DevZone is a server all about developers of all experiences, new or old get a bit help during their learning or
+        development times. We aim to be a helpful and open community doing projects, making blogs and everything to help
+        you
+        become a better developer come join us at discord and say "Hi" to the community.
       </p>
+      <br>
+      <center><a href="https://discord.gg/VEdn4yk"><button class="pressDown">JOIN OUR DISCORD</button></a></center>
     </section>
   </div>
   <!-- Add your site or application content here -->
